<resources>
    <string name="app_name">Çitlembik</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Look for books.. </string>
    <string name="table_original">Table Original</string>
    <string name="table_basic">Table Basic</string>
    <string name="table_original_sortable">Table Original Sortable</string>
    <string name="order_sections_asc">Order sections ASC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_action">Action</string>
    <string name="action_search">Search</string>
    <string name="action_clear_search">Clear</string>
    <string name="action_voice">Voice</string>
    <string name="action_scan">Scan</string>
    <string name="close_action_mode">Close ActionMode</string>
    <string name="favoriler">Favoriler</string>
    <string name="bilim_muhendislik">Bilim - Mühendislik</string>
    <string name="sinavlara_hazirlik">Sınavlara Hazırlık</string>
    <string name="edebiyat">Edebiyat</string>
    <string name="hukuk">Hukuk</string>
    <string name="felsefe">Felsefe</string>
    <string name="ekonomi">Ekonomi</string>
    <string name="sanat_mimarlik">Sanat - Mimarlık</string>
    <string name="sosyoloji">Sosyoloji</string>
    <string name="politika">Politika</string>
    <string name="tarih">Tarih</string>
    <string name="bilgisayar_mobil">Bilgisayar - Mobil</string>
    <string name="saglik">Sağlık</string>
    <string name="hobi">Hobi</string>
    <string name="cocuk">Çocuk</string>
    <string name="searching">Aranıyor</string>
    <string name="desc">Kitap Kapağı</string>
    <string name="silbutonu">SilButonu</string>
    <string name="golge">Gölge</string>
    <string name="gecmis">Geçmiş</string>
    <string name="myself">Güncelle</string>
    <string name="dontUpdate">Güncelleme</string>
    <string name="update">Güncelle (Tümünü Seç)</string>
    <string name="addFav">Favorilere eklensin mi?</string>
    <string name="cancel">Vazgeç</string>
    <string name="add">Ekle</string>
    <string name="add_to_favs">Favorilere Ekle</string>
    <string name="ara">Fiyatları Kıyasla</string>
    <string name="see">Fiyatları Gör</string>
    <string name="update_prices">Fiyatları Güncelle</string>
    <string name="vazgec">Vazgeç</string>
    <string name="delete">Sil</string>
    <string name="sure_to_delete">Favorilerden silinsin mi?</string>
    <string name="sure_to_update">Fiyatlar güncellensin mi?</string>
    <string name="no_internet">İnternet bağlantısı yok.</string>
    <string name="connect">Bağlan</string>
    <string name="site">site</string>
    <string name="payment_methods">Ödeme Yöntemleri</string>
    <string name="credit_card">Kredi Kartı</string>
    <string name="bank_card">Banka Kartı</string>
    <string name="transfer">Havale</string>
    <string name="eft">EFT</string>
    <string name="payPal">PayPal</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="Settings">Ayarlar</string>
    <string name="Privacy">Gizlilik</string>
    <string name="terms">Şartlar</string>
    <string name="share">Paylaş</string>
    <string name="rate"><![CDATA[Puan & Yorum]]></string>
    <string name="once_a_day">Günde Bir</string>
    <string name="once_in_three_days">Üç Günde Bir</string>
    <string name="once_a_week">Haftada Bir</string>
    <string name="tam_sayi">Tamsayı</string>
    <string name="comma">,</string>
    <string name="kusurat">Küsurat</string>
    <string name="shrug">¯\\_(ツ)_/¯</string>
    <string name="best_sites">En Uygun Siteler :</string>
    <string name="best_site">En Uygun Site</string>
    <string name="action_back">Geri</string>
    <string name="action_forward">İleri</string>
    <string name="medya">Medya - İletişim</string>
    <string name="spor">Spor</string>
    <string name="gezi">Turizm - Gezi - Rehber</string>
    <string name="title_activity_results_with_tabs">ResultsWithTabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="halk_kitabevi">Halk Kitabevi</string>
    <string name="kitapsec">Kitapseç</string>
    <string name="bkm_kitap">BKM Kitap</string>
    <string name="kitapyurdu">Kitapyurdu</string>
    <string name="home">Anasayfaya Dön</string>
</resources>
