<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_border"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layoutRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/editText1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="end"
                android:hint="@string/tam_sayi"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                app:fontFamily="@font/my_font_family"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/comma"
                android:textSize="24sp"
                app:fontFamily="@font/my_font_family"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/editText2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="start"
                android:hint="@string/kusurat"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                app:fontFamily="@font/my_font_family"
                android:textStyle="bold" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonDelete"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_not_border"
            android:padding="8dp"
            android:text="@string/shrug"
            android:textColor="@color/colorPrimaryDark"
            app:fontFamily="@font/my_font_family"
            android:textStyle="bold" />
        <Button
            android:id="@+id/buttonChange"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/ok"
            app:fontFamily="@font/my_font_family"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
